assets/sass/partials/_main.scss
/* ... */
#yoast-after-header-1 {
  width: $d_columnOne;
  max-width:50%;
}
#yoast-after-header-2 {
  width: $d_columnTwo;
  max-width:50%;
  margin: {
    left: 60px;
    right: 60px;
  }
  vertical-align: middle;
}
#yoast-after-header-3 {
  width: $d_sidebar;
}
.sidebar-content {
  #yoast-after-header-container {
    #yoast-after-header-1 {
      margin: {
        left: 60px;
        right: 60px;
      }
    }
    #yoast-after-header-2 {
      float:right;
      margin: 0;
    }
  }
}

/**
 * Tagline Widgets
 */

#yoast-tagline-after-header-container {
  border: {
    top: 1px solid $c_hrLine;
    bottom: 1px solid $c_randLine;
  }
}
.yoast-tagline-after-header-widget, #yoast-tagline {
  padding: 20px 0px;
  text-align: center;
  font-size: 1.5em;
  color: $c_taglineFullWidth;
  strong {
    color: $c_taglineFullWidthBold;
    font-weight: 700;
  }
  a {
    color: $c_taglineLink;
    text-decoration: underline;
    &:hover {
      color: $c_taglineLinkHover;
      text-decoration: none;
    }
  }
  .widget,
  .widget-wrap {
    padding: {
      bottom: 0;
    }
    margin: {
      bottom: 0;
    }
  }
}

/**
 * Sidebars
 */

.sidebar {
  color: $c_sidebarText;
}

/**
 * Default widget design
 */

.widget-wrap {
  padding: {
    bottom: 32px;
  }
  > p {
    padding: {
      left: 10px;
    }
    a {
      text: {
        decoration: underline;
      }
      &:hover {
        text: {
          decoration: none;
        }
      }
    }
  }
  > ul {
    margin: {
      left: 26px;
      bottom:1em;
    }
  }
  li {
    list-style:square;
    margin: {
      bottom:0;
    }
    line-height: 1.625em;
    a {
      border: {
        bottom: 0;
      }
      color: $c_sidebarLink;
      text: {
        decoration: underline;
      }
      &:hover {
        text-decoration: none;
      }
    }
  }
  .featuredpost ul {
    margin: {
      bottom: 10px;
    }
    li a {
      text-decoration:none;
      &:after {
        content: '»';
        text: {
          decoration: none !important;
        }
        padding: {
          left: 5px;
          top: 1px;
        }
        font: {
          size: 1.2em;
        }
        color: $c_sidebarLinkArrow;
      }
      &:hover {
        color: $c_mainLinkHover;
      }
    }
  }
  .text-widget {
    padding: 0 1em;
  }
  p:last-child {
    margin: {
      bottom: 0;
    }
  }
  li {
    margin: {
      bottom: 6px;
    }
    word-wrap: break-word;
  }
  ul > li:last-child {
    margin: {
      bottom: 0;
    }
  }
  .widget {
    padding: {
      bottom: 40px;
    }
    .widget {
      padding: {
        bottom: 0;
      }
    }
  }
  form {
    padding: 0 10px;
    &.search-form {
      padding:0;
    }
  }
  .user-profile,
  .widget_tag_cloud {
    .widget-wrap {
      p,
      div {
        padding: 0 10px;
        a {
          font: {
            weight: 700;
          }
        }
      }
    }
  }
}
.widget-title {
  font: {
    size:$f_sidebarH3-px;
    size:$f_sidebarH3;
  }
  margin: {
    bottom: 16px;
  }
  text: {
    transform: none;
  }
  background-color: $c_sidebarH3Bg;
  color: $c_sidebarH3;
  padding: 10px;
  a {
    border:none;
    color: $c_sidebarH3;
  }
  + div {
    padding: {
      left: 10px;
    }
  }
}

/**
 * Sidebar Widgets
 */

.widget_bigbutton {
  .button-green {
    a {
      display: block;
      padding: 15px;
      border: {
        width: 1px;
        style: solid;
        color: $c_ctaBorder;
      }
      @include box-shadow(inset 0px 0 5px $c_ctaBoxShadow);
      @include background-image(linear-gradient(lighten($c_ctaBg,10%),$c_ctaBg));
      color: $c_ctaTextWhite;
      font: {
        size: $f_ctaText-px;
        size: $f_ctaText;
      }
      line-height: 1em;
      @include text-shadow($c_ctaTextShadow 1px 1px 5px);
      &:after {
        content: '▸';
        padding: {
          left: 5px;
          top: 1px;
        }
      }
      &:hover {
        @include background-image(linear-gradient($c_ctaBg,lighten($c_ctaBg,10%)));
        color: $c_ctaTextWhite;
      }
    }
  }
}

/**
 * Newsletter Widget
 */

.widget-yns {
  p,
  form {
    padding: {
      left: 10px;
      right: 10px;
    }
  }
  form {
    label {
      display:block;
      font: {
        size: $f_sidebarLabel-px;
        size: $f_sidebarLabel;
        weight: 700;
      }
    }
    input {
      padding:8px;
      margin: {
        bottom: 10px;
      }
      &[type="text"] {
        width:80%;
      }
      &[type="submit"] {
        font: {
          size: 12px;
        }
      }
    }
  }
}
/**
 * Newletter Widget additions for the after-post area
 */

.yoast-after-post-widget {
  border: {
    width:1px 0;
    style:solid;
    color:$c_hrLine;
  }
  padding: {
    top: 20px;
  }
  margin: {
    bottom:36px;
  }
  .widget {
    border: {
      width:1px 0 0;
      style:solid;
      color:$c_hrLine;
    }
    padding: {
      top: 20px;
    }
    &:first-child {
      border:0;
      padding: {
        top: 0;
      }
    }
    div {
      padding: {
        left:0;
      }
    }
    .widget-title,
    p,
    form {
      padding: {
        left:0;
      }
    }
    .widget-title {
      margin: {
        bottom:0;
      }
      background: {
        color: $c_mainBg;
      }
    }
  }
}

/**
 * Social Media Widget / User Profile
 */

.widget_socials {
  margin: {
    bottom: 40px;
  }
}
/* ... */

